--- a/assets/assets.css
+++ b/assets/assets.css
@@ -625,7 +625,7 @@ input[type=number] {
   flex-wrap: wrap;
 }
 .paginas .pagina {
-  width: 18px;
+  width: 40px;
   height: 18px;
   background: var(--sec);
   border-radius: 4px;
@@ -653,7 +653,6 @@ input[type=number] {
   border: 2px solid var(--main);
 }
 .navigation {
-  position: fixed;
   bottom: 4px;
   left: 20px;
   right: 20px;
@@ -689,11 +688,11 @@ input[type=number] {
   background-size: 40px;
 }
 #app {
-  padding: 30px 0;
+  padding: 30px 0 0 0;
 }
 @media (max-width: 992px) {
   #app {
-    padding: 20px 0 80px 0;
+    padding: 20px 0 20px 0;
   }
 }
 .counter {
@@ -842,7 +841,7 @@ input[type=number] {
 }
 .lastscene .navigation .paginas .pagina {
   font-size: 14px;
-  width: 28px;
+  width: 60px;
   height: 28px;
 }
 .lastscene .navigation .paginas .pagina.isanswered,
@@ -934,5 +933,14 @@ input[type=number] {
 .relational .targets > div {
   border: 4px solid #F78E26;
   border-radius: 10px;
+}
+.finalize {
+  margin-bottom: 60px;
+}
+.lastscene .navigation .pagina.unanswered {
+  max-width: 28px;
+  background: #E2F1F6;
+  color: #0788AD;
+  margin: 2px !important;
 }
 /*# sourceMappingURL=assets.css.map */
