--- a/assets/assets.less
+++ b/assets/assets.less
@@ -581,7 +581,7 @@ input[type=number] {
     align-items: center;
     flex-wrap: wrap;
 	.pagina{
-		width: 18px;
+		width: 40px;
 		height: 18px;
 		background: var(--sec);
         border-radius: 4px;
@@ -611,7 +611,7 @@ input[type=number] {
 }
 
 .navigation{
-	position: fixed;
+	//position: fixed;
 	bottom: 4px;
 	left: 20px;
 	right: 20px;
@@ -648,9 +648,9 @@ input[type=number] {
 }
 
 #app{
-    padding: 30px 0;
+    padding: 30px 0 0 0;
     @media (max-width:992px){
-        padding: 20px 0 80px 0;
+        padding: 20px 0 20px 0;
     }
 }
 
@@ -821,7 +821,7 @@ input[type=number] {
 	.paginas{
 		.pagina{
 			font-size: 14px;
-			width: 28px;
+			width: 60px;
 			height: 28px;
 		}
 		.pagina.isanswered, .pagina:last-child{
@@ -931,4 +931,17 @@ input[type=number] {
 .relational .targets > div {
 	border: 4px solid #F78E26;
 	border-radius: 10px;
+}
+
+
+
+.finalize{
+    margin-bottom: 60px;
+}
+
+.lastscene .navigation .pagina.unanswered{
+	max-width: 28px;
+	background: #E2F1F6;
+	color: #0788AD;
+	margin: 2px !important;
 }
