--- a/assets/pug/_head.pug
+++ b/assets/pug/_head.pug
@@ -7,7 +7,7 @@ mixin head
         link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css")
         link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css")
-        link(rel="stylesheet", href="../../assets/font/stylesheet.css?v="+version)
-        link(rel="stylesheet", href="../../assets/assets.css?v="+version)
+        link(rel="stylesheet", href="../assets/font/stylesheet.css?v="+version)
+        link(rel="stylesheet", href="../assets/assets.css?v="+version)
         if block
             block
