--- a/assets/pug/_scripts.pug
+++ b/assets/pug/_scripts.pug
@@ -5,20 +5,20 @@ mixin scripts(extrascript)
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.5/js/jsplumb.js")
     script(src="https://cdn.jsdelivr.net/npm/sortablejs@1.8.4/Sortable.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/2.20.0/vuedraggable.umd.min.js")
-    script(src="../../assets/modulos/dragdropMod.js")
-    script(src="../../assets/modulos/dropdowns.js")
-    script(src="../../assets/modulos/selectable.js")
-    script(src="../../assets/modulos/selectableoptions.js")
-    script(src="../../assets/modulos/check.js")
-    script(src="../../assets/modulos/inputbox.js")
-    script(src="../../assets/modulos/choose.js")
-    script(src="../../assets/modulos/popper.js")
-    script(src="../../assets/modulos/relational.js")
-    script(src="../../assets/modulos/finalize.js?v="+version)
-    script(src="../../assets/modulos/counter.js?v="+version)
-    script(src="../../assets/modulos/utils.js?v="+version)
+    script(src="../assets/modulos/dragdropMod.js")
+    script(src="../assets/modulos/dropdowns.js")
+    script(src="../assets/modulos/selectable.js")
+    script(src="../assets/modulos/selectableoptions.js")
+    script(src="../assets/modulos/check.js")
+    script(src="../assets/modulos/inputbox.js")
+    script(src="../assets/modulos/choose.js")
+    script(src="../assets/modulos/popper.js")
+    script(src="../assets/modulos/relational.js")
+    script(src="../assets/modulos/finalize.js?v="+version)
+    script(src="../assets/modulos/counter.js?v="+version)
+    script(src="../assets/modulos/utils.js?v="+version)
     if extrascript
         script(src=extrascript)
-    script(src="../../assets/assets.js?v="+version)
+    script(src="../assets/assets.js?v="+version)
     if block
         block
