--- a/assets/pug/_head.pug
+++ b/assets/pug/_head.pug
@@ -4,9 +4,9 @@ mixin head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{title}
-        link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap")
-        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css")
-        link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css")
+        link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" crossorigin="anonymous")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" crossorigin="anonymous")
+        link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous")
         link(rel="stylesheet", href="../assets/font/stylesheet.css?v="+version)
         link(rel="stylesheet", href="../assets/assets.css?v="+version)
         if block
