--- a/assets/assets.less
+++ b/assets/assets.less
@@ -955,3 +955,10 @@ input[type=number] {
 .finalizar.small.savedok{
 	background: #5EB246;
 }
+
+
+#finalize{
+	background: #f5f5f5;
+	padding: 40px 0;
+    border-radius: 10px;
+}
