--- a/assets/assets.css
+++ b/assets/assets.css
@@ -950,4 +950,9 @@ input[type=number] {
 .finalizar.small.savedok {
   background: #5EB246;
 }
+#finalize {
+  background: #f5f5f5;
+  padding: 40px 0;
+  border-radius: 10px;
+}
 /*# sourceMappingURL=assets.css.map */
