--- a/assets/assets.css
+++ b/assets/assets.css
@@ -689,6 +689,7 @@ input[type=number] {
   background-size: 40px;
 }
 #app {
+  background: #fff;
   padding: 30px 0 0 0;
 }
 @media (max-width: 992px) {
@@ -954,5 +955,8 @@ input[type=number] {
   background: #f5f5f5;
   padding: 40px 0;
   border-radius: 10px;
+}
+body {
+  padding: 10px 0 10px 0;
 }
 /*# sourceMappingURL=assets.css.map */
