--- a/assets/assets.less
+++ b/assets/assets.less
@@ -649,6 +649,7 @@ input[type=number] {
 }
 
 #app{
+    background:#fff;
     padding: 30px 0 0 0;
     @media (max-width:992px){
         padding: 20px 0 20px 0;
@@ -961,4 +962,11 @@ input[type=number] {
 	background: #f5f5f5;
 	padding: 40px 0;
     border-radius: 10px;
+}
+
+
+
+
+body{
+    padding: 10px 0 10px 0;
 }
