--- a/assets/pug/_scripts.pug
+++ b/assets/pug/_scripts.pug
@@ -5,6 +5,7 @@ mixin scripts(extrascript)
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.5/js/jsplumb.js")
     script(src="https://cdn.jsdelivr.net/npm/sortablejs@1.8.4/Sortable.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/2.20.0/vuedraggable.umd.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/autolinker/3.14.2/Autolinker.min.js")
     script(src="../assets/modulos/dragdropMod.js")
     script(src="../assets/modulos/dropdowns.js")
     script(src="../assets/modulos/selectable.js")
@@ -13,6 +14,7 @@ mixin scripts(extrascript)
     script(src="../assets/modulos/inputbox.js")
     script(src="../assets/modulos/choose.js")
     script(src="../assets/modulos/popper.js")
+    script(src="../assets/modulos/poppermini.js")
     script(src="../assets/modulos/relational.js")
     script(src="../assets/modulos/finalize.js?v="+version)
     script(src="../assets/modulos/counter.js?v="+version)
