--- a/assets/assets.less
+++ b/assets/assets.less
@@ -773,11 +773,23 @@ input[type=number] {
         }
     }
     .extraconsulta{
-        background: #ABD281;
+        background:rgba(255,255,255,0.3);
         border-radius: 10px;
-        margin-top: 10px;
+        margin: 10px;
+        p{
+            margin-bottom: 0;
+        }
         p small{
             font-size: 1.1rem;
+        }
+        .popper.mini {
+            .popper__opener{
+                background: none;
+                height: 50px;
+            }
+            .popper__q{
+                background-size: 30%;
+            }
         }
     }
 	button{
