--- a/assets/assets.less
+++ b/assets/assets.less
@@ -513,6 +513,11 @@ input[type=number] {
 			border-radius: 10px;
 			box-shadow: -8px 8px 0px rgba(0,0,0,0.1);
             position: relative;
+            div{
+                font-size: 1.1rem;
+                max-height: 480px;
+                overflow-y: auto;
+            }
 		}
 		.popper__closer{
 		  font-family: 'barnacle_boyregular';
